# WriterServer

./: LICENSE  README.md  pyproject.toml
src/: networkCode.json  writer.py
src/writerserver/: writer.py
