[project]
name = "writerserver"
version = "0.0.5"
authors = [
  { name="Renaud Bastien", email="renaud@unred.org" },
]
description = "A small server to write data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RnoB/WriterServer"
"Bug Tracker" = "https://github.com/RnoB/WriterServer/issues"